hphp/test/zend/bad/ext/standard/tests/file/chroot_001.php
<?php
mkdir("chroot_001_x");
var_dump(is_dir("chroot_001_x"));
var_dump(chroot("chroot_001_x"));
var_dump(is_dir("chroot_001_x"));
var_dump(realpath("."));
?>
<?php
rmdir("chroot_001_x");
?>